--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -10,15 +10,13 @@ jobs:
     name: Docker build & push
     runs-on: ubuntu-latest
     steps:
-    -
-      name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: qualleadmin
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    -
-      name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: qualleadmin/zapier-action:latest
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: qualleadmin
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: qualleadmin/zapier-action:latest
