--- a/action.yaml
+++ b/action.yaml
@@ -1,9 +1,9 @@
-name: 'GitHub Action for Zapier'
-author: 'Qualle'
-description: 'Wraps the zapier-platform-cli CLI to enable common commands.'
+name: "GitHub Action for Zapier"
+author: "Qualle"
+description: "Wraps the zapier-platform-cli CLI to enable common commands."
 branding:
-  icon: 'package'
-  color: 'gray-dark'
+  icon: "package"
+  color: "gray-dark"
 runs:
-  using: 'docker'
-  image: 'docker://qualle-admin/zapier-action:latest'
+  using: "docker"
+  image: "docker://qualleadmin/zapier-action:latest"
